# Memento-aware-Browser

./: .gclient  .gclient_entries  .gitattributes  .gitignore  .gitmodules  README.md
.cipd/: tagcache.db
android_webview/: BUILD.gn
android_webview/browser/: BUILD.gn  aw_browser_process.cc  aw_browser_terminator.cc  aw_content_browser_client.cc  aw_contents.cc  aw_feature_list_creator.cc  aw_field_trials.cc
android_webview/common/: aw_features.h
android_webview/glue/: BUILD.gn
ash/: BUILD.gn  ash_strings.grd  shell.cc  shell.h
ash/accessibility/: accessibility_controller_impl.cc  accessibility_controller_impl.h
ash/ambient/: ambient_controller.cc  ambient_controller.h  ambient_photo_controller.cc  ambient_photo_controller.h  autotest_ambient_api_unittest.cc  fake_ambient_backend_controller_impl.h
ash/app_list/: app_list_controller_impl.cc  app_list_controller_impl.h  app_list_presenter_delegate_unittest.cc  app_list_presenter_impl.cc  app_list_view_delegate.h
ash/ash_strings_grd/: IDS_ASH_SHELF_DISPLAY_SETTINGS.png.sha1
ash/assistant/: assistant_alarm_timer_controller_impl.cc  assistant_controller_impl.cc  assistant_controller_impl.h  assistant_interaction_controller_impl.cc  assistant_interaction_controller_impl.h  assistant_notification_controller_unittest.cc  assistant_notification_expiry_monitor.cc  assistant_suggestions_controller_impl.cc  assistant_ui_controller_impl.cc  assistant_view_delegate_impl.cc
ash/drag_drop/: drag_drop_controller.cc
ash/hud_display/: graphs_container_view.cc
ash/login/: login_screen_controller.cc  login_screen_controller.h
ash/quick_answers/: quick_answers_controller_impl.cc  quick_answers_controller_impl.h
ash/rotator/: screen_rotation_animator.cc
ash/shelf/: hotseat_widget.h  shelf_view.h  (+10 more)
build_overrides/: build.gni
cc/: BUILD.gn
chrome/: BUILD.gn
chrome/browser/resources/chromeos/accessibility/autoclick/: BUILD.gn
docs/: README.md  archives.md
src/: .clang-format  .clang-tidy  .eslintrc.js  .gitattributes  .gitignore  .gn  .landmines  .vpython  .vpython3  .yapfignore  BUILD.gn  DEPS  LICENSE.chromium_os  OWNERS  PRESUBMIT.py  README.md  WATCHLISTS  archive.py  codereview.settings  status.txt
src/chrome/browser/privacy_budget/: BUILD.gn  DEPS  container_ops.h  container_ops_unittest.cc  field_trial_param_conversions.cc  field_trial_param_conversions.h  field_trial_param_conversions_unittest.cc  identifiability_study_state.cc  identifiability_study_state.h  identifiability_study_state_unittest.cc  internal_unordered_container_ops_unittest.cc  privacy_budget_features.cc  privacy_budget_features.h  privacy_budget_prefs.cc  privacy_budget_prefs.h  privacy_budget_ukm_entry_filter.cc  privacy_budget_ukm_entry_filter.h  privacy_budget_ukm_entry_filter_unittest.cc  scoped_privacy_budget_config.cc  scoped_privacy_budget_config.h
src/chromeos/components/telemetry_extension_ui/: BUILD.gn  DEPS  OWNERS  probe_service.cc  probe_service.h  telemetry_extension_ui.cc  telemetry_extension_ui.h  url_constants.cc  url_constants.h
src/chromeos/components/telemetry_extension_ui/mojom/: BUILD.gn  probe_service.mojom
src/chromeos/components/telemetry_extension_ui/resources/: index.html  manifest.json  telemetry_extension_resources.grd  trusted.js  untrusted.html  untrusted.js
src/chromeos/components/telemetry_extension_ui/test/: telemetry_extension_ui_browsertest.js
src/components/federated_learning/: BUILD.gn  OWNERS  README.md  floc_id.cc  floc_id.h  sim_hash.cc  sim_hash.h  sim_hash_unittest.cc
src/components/prerender/common/: BUILD.gn  OWNERS  prerender_canceler.mojom  prerender_final_status.cc  prerender_final_status.h  prerender_messages.h  prerender_origin.cc  prerender_origin.h  prerender_types.h  prerender_types.mojom
src/ios/chrome/browser/ui/signin_interaction/: BUILD.gn  OWNERS  signin_interaction_controller_egtest_util.h  signin_interaction_controller_egtest_util.mm
src/ios/chrome/browser/ui/signin_interaction/public/: BUILD.gn  signin_presenter.h
src/ui/accessibility/platform/: BUILD.gn  DEPS  OWNERS  atk_util_auralinux.cc  atk_util_auralinux.h  atk_util_auralinux_gtk.cc  atk_util_auralinux_unittest.cc  ax_android_constants.cc  ax_android_constants.h  ax_fragment_root_delegate_win.h  ax_fragment_root_win.cc  ax_fragment_root_win.h  ax_fragment_root_win_unittest.cc  ax_platform_atk_hyperlink.cc  ax_platform_atk_hyperlink.h  ax_platform_node.cc  ax_platform_node.h  ax_platform_node_auralinux.cc  ax_platform_node_auralinux.h  ax_platform_node_auralinux_unittest.cc  ax_platform_node_base.cc  ax_platform_node_base.h  ax_platform_node_base_unittest.cc  ax_platform_node_delegate.h  ax_platform_node_delegate_base.cc  ax_platform_node_delegate_base.h  ax_platform_node_delegate_utils_win.cc  ax_platform_node_delegate_utils_win.h  ax_platform_node_mac.h  ax_platform_node_mac.mm  ax_platform_node_test_helper.cc  ax_platform_node_test_helper.h  ax_platform_node_textchildprovider_win.cc  ax_platform_node_textchildprovider_win.h  ax_platform_node_textchildprovider_win_unittest.cc  ax_platform_node_textprovider_win.cc  ax_platform_node_textprovider_win.h  ax_platform_node_textprovider_win_unittest.cc  ax_platform_node_textrangeprovider_win.cc  ax_platform_node_textrangeprovider_win.h  (+21 more)
src/ui/base/cursor/: BUILD.gn  cursor.cc  cursor.h  cursor_factory.cc  cursor_factory.h  cursor_loader.h  cursor_loader_ozone.cc  cursor_loader_ozone.h  cursor_loader_win.cc  cursor_loader_win.h  cursor_loader_x11.cc  cursor_loader_x11.h  cursor_lookup.cc  cursor_lookup.h  cursor_ozone.cc  cursor_size.h  cursor_theme_manager_linux.cc  cursor_theme_manager_linux.h  cursor_theme_manager_linux_observer.h  cursor_unittest.cc  cursor_util.cc  cursor_util.h  cursor_util_unittest.cc  cursor_win.cc  cursor_x11.cc  cursors_aura.cc  cursors_aura.h  image_cursors.cc  image_cursors.h
src/ui/base/cursor/mojom/: BUILD.gn  DEPS  OWNERS  cursor.mojom  cursor_mojom_traits.cc  cursor_mojom_traits.h  cursor_mojom_traits_unittest.cc  cursor_type.mojom
src/ui/base/cursor/ozone/: OWNERS  bitmap_cursor_factory_ozone.cc  bitmap_cursor_factory_ozone.h
(+118946 files in other folders)
