# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "prerender_final_status.cc",
    "prerender_final_status.h",
    "prerender_messages.h",
    "prerender_origin.cc",
    "prerender_origin.h",
    "prerender_types.h",
  ]
  deps = [
    "//ipc",
    "//ipc:message_support",
    "//ipc:param_traits",
  ]
}

mojom("mojo_bindings") {
  sources = [ "prerender_canceler.mojom" ]
  deps = [ "//url/mojom:url_mojom_gurl" ]
}
