# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import(
    "//chrome/browser/resources/chromeos/accessibility/common/run_jsbundler.gni")
import("//chrome/test/base/js2gtest.gni")
import("//testing/test.gni")
import("//third_party/closure_compiler/compile_js.gni")

assert(is_chromeos)

autoclick_dir = "$root_out_dir/resources/chromeos/accessibility/autoclick"

group("build") {
  deps = [ ":autoclick_copied_files" ]
}

# Instead of setting up copy targets, use a script to copy all files.
run_jsbundler("autoclick_copied_files") {
  mode = "copy"
  dest_dir = autoclick_dir
  sources = [ "autoclick.js" ]
  rewrite_rules = [
    rebase_path(".", root_build_dir) + ":",
    rebase_path(closure_library_dir, root_build_dir) + ":closure",
  ]
}

source_set("browser_tests") {
  testonly = true
  assert(enable_extensions)

  deps = [ ":autoclick_extjs_tests" ]

  data = [
    "$root_out_dir/chrome_100_percent.pak",
    "$root_out_dir/chrome_200_percent.pak",
    "$root_out_dir/locales/en-US.pak",
    "$root_out_dir/resources.pak",
    "$root_out_dir/resources/chromeos/accessibility/autoclick/",
    "$root_out_dir/test_data/chrome/browser/resources/chromeos/accessibility/autoclick/",

    # The test uses data from the original location, not the copied one.
    "//chrome/browser/resources/chromeos/accessibility/autoclick/",
    "//chrome/browser/resources/chromeos/accessibility/common/",
    "//ui/webui/resources/js/cr.js",
  ]
  data += js2gtest_js_libraries
}

js2gtest("autoclick_extjs_tests") {
  test_type = "extension"
  sources = [ "autoclick_test.js" ]
  gen_include_files = [
    "../common/testing/callback_helper.js",
    "mock_accessibility_private.js",
  ]

  # The test base classes generate C++ code with these deps.
  deps = [
    "//ash",
    "//ash/keyboard/ui",
    "//base",
    "//chrome/browser/chromeos",
    "//chrome/common",
  ]
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
}

js_type_check("closure_compile") {
  deps = [ ":autoclick" ]
}

js_library("autoclick") {
  deps = []
  externs_list = [
    "$externs_path/accessibility_private.js",
    "$externs_path/automation.js",
  ]
}
