# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("eg_test_support") {
  defines = [ "CHROME_EARL_GREY_1" ]
  configs += [ "//build/config/compiler:enable_arc" ]
  testonly = true
  sources = [
    "signin_interaction_controller_app_interface.h",
    "signin_interaction_controller_app_interface.mm",
    "signin_interaction_controller_egtest_util.h",
    "signin_interaction_controller_egtest_util.mm",
  ]

  deps = [
    "//base",
    "//base/test:test_support",
    "//ios/chrome/browser/ui/authentication",
    "//ios/chrome/test/app:test_support",
    "//ios/chrome/test/earl_grey:test_support",
    "//ios/testing/earl_grey:earl_grey_support",
  ]
}

source_set("eg_test_support+eg2") {
  defines = [ "CHROME_EARL_GREY_2" ]
  configs += [
    "//build/config/compiler:enable_arc",
    "//build/config/ios:xctest_config",
  ]
  testonly = true
  sources = [
    "signin_interaction_controller_app_interface.h",
    "signin_interaction_controller_egtest_util.h",
    "signin_interaction_controller_egtest_util.mm",
  ]

  deps = [
    "//base",
    "//base/test:test_support",
    "//ios/chrome/app/strings",
    "//ios/chrome/test/earl_grey:eg_test_support+eg2",
    "//ios/public/provider/chrome/browser/signin:fake_chrome_identity",
    "//ios/testing/earl_grey:eg_test_support+eg2",
    "//ios/third_party/earl_grey2:test_lib",
  ]
}

source_set("eg_app_support+eg2") {
  defines = [ "CHROME_EARL_GREY_2" ]
  configs += [ "//build/config/compiler:enable_arc" ]
  testonly = true
  sources = [
    "signin_interaction_controller_app_interface.h",
    "signin_interaction_controller_app_interface.mm",
  ]
  deps = [
    "//base",
    "//ios/chrome/browser/ui/authentication",
  ]
}
